--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,12 @@
+@import "reset";
+@import "config/colors";
+@import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "reset";
-@import "modules/messages";
 @import "side_bar.scss";
 @import "main_chat.scss";
-
+@import "modules/user";
+@import "modules/flash";
 
 
 
