--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,12 +1,13 @@
 .SideBar
   .SideBar__header
     .SideBar__header__info
-      .SideBar__header__info__name masa
+      .SideBar__header__info__name 
+        = current_user.name
       .SideBar__header__info__icons
-        = link_to "#", class: "EditBtn" do
-          = icon('fas', 'edit')
-        = link_to "#", class: "CogBtn" do
-          = icon('fas', 'cog')
+        = link_to "#" do
+          = icon('fas', 'edit', class: 'EditBtn')
+        = link_to edit_user_path(current_user) do
+          = icon('fas', 'cog', class: 'CogBtn')
 
   .SideBar__GroupList
     .SideBar__GroupList__GroupInfo
