--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,18 +4,21 @@
       .SideBar__header__info__name 
         = current_user.name
       .SideBar__header__info__icons
-        = link_to "#" do
+        = link_to new_group_path do
           = icon('fas', 'edit', class: 'EditBtn')
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class: 'CogBtn')
 
   .SideBar__GroupList
-    .SideBar__GroupList__GroupInfo
-      %p.SideBar__GroupList__GroupInfo__name techcamp
-      %p.SideBar__GroupList__GroupInfo__comment まだメッサージはありません
+    - current_user.groups.each do |group|
+      .SideBar__GroupList__GroupInfo
+        = link_to "#" do
+          %p.SideBar__GroupList__GroupInfo__name
+            = group.name
+          %p.SideBar__GroupList__GroupInfo__comment まだメッサージはありません
       
-      %p.SideBar__GroupList__GroupInfo__name techexpert
-      %p.SideBar__GroupList__GroupInfo__comment まだメッサージはありません
+      -# %p.SideBar__GroupList__GroupInfo__name techexpert
+      -# %p.SideBar__GroupList__GroupInfo__comment まだメッサージはありません
 
 
 
