--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -3,9 +3,15 @@
   .MainChat__header
   
     .MainChat__header__GroupInfo
-      .MainChat__header__GroupName test
-      .MainChat__header__GroupMember Member : name
-
+      .MainChat__header__GroupName
+      = link_to group_messages_path(@group) do
+        = @group.name
+      .MainChat__header__CurrentGroup
+        .MainChat__header__CurrentGroup__name Member : 
+        %ul
+          - @group.users.each do |user|
+            %li= user.name
+          
     .MainChat__header__RightBox
       = link_to "#" do
         .MainChat__header__RightBox__EditBtn Edit
@@ -13,26 +19,35 @@
 
 
   .MainChat__MessageList
+    = render @messages
 
-    .MainChat__MessageList__NewMessage1  
-      %p.MainChat__MessageList__NewMessage1__name masa 
-      %p.MainChat__MessageList__NewMessage1__date 2019/11/20(Wed) 17:43:01 
-      %p.MainChat__MessageList__NewMessage1__comment おはよう！
+    -# .MainChat__MessageList__NewMessage1  
+    -#   %p.MainChat__MessageList__NewMessage1__name masa 
+    -#   %p.MainChat__MessageList__NewMessage1__date 2019/11/20(Wed) 17:43:01 
+    -#   %p.MainChat__MessageList__NewMessage1__comment おはよう！
 
-    .MainChat__MessageList__NewMessage2
-      %p.MainChat__MessageList__NewMessage2__name masa 
-      %p.MainChat__MessageList__NewMessage2__date 2019/11/20(Wed) 17:43:01 
-      %p.MainChat__MessageList__NewMessage2__comment 今日は夜から雨
+    -# .MainChat__MessageList__NewMessage2
+    -#   %p.MainChat__MessageList__NewMessage2__name masa 
+    -#   %p.MainChat__MessageList__NewMessage2__date 2019/11/20(Wed) 17:43:01 
+    -#   %p.MainChat__MessageList__NewMessage2__comment 今日は夜から雨
 
 
-  .MainChat__MessageForm
-    %form.NewMessage
+  .MainChat__MessageForm    
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'InputBox__text', placeholder: 'type a message'
       .InputBox
-        %input{type: "text", class: "InputBox__text",placeholder: "type a message"}
-        %label{class: "InputBox__image"}
-          =icon('fas', 'image')
-          %input{type: "file", class: "InputBox__image__file"}
-      %input{type: "submit", class: "SubmitBtn"}
+        = f.label :image, class: 'InputBox__image' do
+          = icon('fas', 'image', class: 'InputBox__image__file')
+          = f.file_field :image, class: 'InputBox__image__hidden'
+      = f.submit 'Send', class: 'SubmitBtn'
+
+    -# %form.NewMessage
+    -#   .InputBox
+    -#     %input{type: "text", class: "InputBox__text",placeholder: "type a message"}
+    -#     %label{class: "InputBox__image"}
+    -#       =icon('fas', 'image')
+    -#       %input{type: "file", class: "InputBox__image__file"}
+    -#   %input{type: "submit", class: "SubmitBtn"}
 
 
 
