--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -82,6 +82,7 @@ $MessageCommentColor: #434a54;
   &__MessageList {
     background-color: #fafafa;
     height: calc(100% - 100px - 90px);
+    overflow: scroll;
   }
 
 
@@ -89,7 +90,9 @@ $MessageCommentColor: #434a54;
   .message {
     padding: 30px 40px;
 
+
     .upper-message {
+      display: flex;
       
       &__user-name {
         font-size: 16px;
@@ -98,6 +101,9 @@ $MessageCommentColor: #434a54;
       &__date {
         color: $MessageDateColor;
         font-size: 12px;
+        margin-left: 10px;
+        
+        
   
       }
   
