--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -13,7 +13,7 @@
             %li= user.name
           
     .MainChat__header__RightBox
-      = link_to "#" do
+      = link_to edit_group_path(@group) do
         .MainChat__header__RightBox__EditBtn Edit
       
 
